--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -115,20 +115,20 @@
           <div class="view_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
         </div>
         <div class="view">
-          <div class="view_in_wrap">
-              <div class="view_content view_content_01"><a href="#"></a></div>
-              <div class="view_content view_content_02"><a href="#"></a></div>
-              <div class="view_content view_content_03"><a href="#"></a></div>
-              <div class="view_content view_content_04"><a href="#"></a></div>
-              <div class="view_content view_content_05"><a href="#"></a></div>
-          </div>
+          <ul class="view_in_wrap">
+              <li class="view_content view_content_01 on"><a href="#"></a></li>
+              <li class="view_content view_content_02"><a href="#"></a></li>
+              <li class="view_content view_content_03"><a href="#"></a></li>
+              <li class="view_content view_content_04"><a href="#"></a></li>
+              <li class="view_content view_content_05"><a href="#"></a></li>
+          </ul>
         </div>
-        <div class="view_num"><span>1</span>&sol;<span>5</span></div>
-      </div>
+        <div class="view_num"><span class="view_now_count">1</span>&sol;<span class="view_total_count"></span></div>
+      </div> <!-- // .view_area -->
       <ul class="side_view_area">
-        <li class="side_view"><a href="#">event</a></li>
-        <li class="side_view"><a href="#">magazine</a></li>
-        <li class="side_view"><a href="#">cubeme</a></li>
+        <li class="side_view side_view_event"><a href="#"><p>오직 큐브미에서만!</p></a></li>
+        <li class="side_view side_view_magazine"><a href="#"><p>CUBEME Magazine</p></a></li>
+        <li class="side_view side_view_brand"><a href="#"><p>CUBEME Brand Story</p></a></li>
       </ul>
 
     </section> <!-- // #viewBox-->
@@ -139,7 +139,7 @@
       <div class="title_area">
         <div class="title_text">
           <h2 class="title">가장 핫한 큐브</h2>
-          <span class="sub_title">9월 가장 인기 많은 베스트 큐브를 만나보세요.</span>
+          <span class="sub_title">1월 가장 인기 많은 베스트 큐브를 만나보세요.</span>
         </div>
         <div class="title_all"><a href="#">모두보기(<span class="best_length">14</span>)</a></div>
       </div>
@@ -539,7 +539,7 @@
   </div><!-- // #wrap -->
 
   <!-- script -->
-  <script></script>
+  <script src="../js/src/main.js"></script>
   
 </body>
 </html>
