[add/modify] js기능추가 / sass 단계 정리

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -88,13 +88,13 @@
 
       <nav id="hand_nav">
         <h2 class="blind">navigation</h2>
-        <div class="hand_language" tabindex="0">
-          <ul>
+        <button class="hand_language" tabindex="0">
+          <ul class="hand_language_area">
             <li><a href="#"><span>한국어</span></a></li>
             <li><a href="#"><span>ENGLISH</span></a></li>
             <li><a href="#"><span>中國語</span></a></li>
           </ul>
-        </div>
+        </button>
         <button type="button" class="hand_search"></button>
         <button type="button" class="hand_cart"></button>
         <button type="button" class="hand_menu"></button>
