--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -87,6 +87,7 @@
         <li><a href="./e_04_slide_area_touch.html">터치 및 이벤트 핸들러</a></li>
         <li><a href="./e_05_slide_movie.html">slide movie 및 css animation 설정</a></li>
         <li><a href="./e_06_responsive.html">반응형웹 구현을 위한 js구현</a></li>
+        <li><a href="./e_07_kakaoAPI.html">카카오 API를 이용하여 카카오 지도 구축</a></li>
       </ul>
     </section>
 
