--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -88,6 +88,7 @@
         <li><a href="./e_05_slide_movie.html">slide movie 및 css animation 설정</a></li>
         <li><a href="./e_06_responsive.html">반응형웹 구현을 위한 js구현</a></li>
         <li><a href="./e_07_kakaoAPI.html">카카오 API를 이용하여 카카오 지도 구축</a></li>
+        <li><a href="./e_09_scrollMove.html">웹페이지 스크롤 기능 처리</a></li>
       </ul>
     </section>
 
