[add] scroll.js  js 마우스휠 처리

--- a/study_code/b_step_03/html/e_09_scrollMove.html
+++ b/study_code/b_step_03/html/e_09_scrollMove.html
@@ -18,11 +18,18 @@
     </header>
 
     <p>scroll 체크</p>
+    <div class="scroll_down_btn">
+      <button type="button">
+        <span>scroll to</span>
+        <i></i>
+      </button>
+    </div>
 
   </div>
 
   <!-- script -->
-  <script src="../dist/src/e_09_scrollMove.js"></script>
+  <!-- <script src="../dist/src/e_09_scrollMove.js"></script> -->
+  <script src="../dist/src/e_09_scrollWheel.js"></script>
   
 </body>
 </html>
