--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -90,6 +90,7 @@
         <li><a href="./e_07_kakaoAPI.html">카카오 API를 이용하여 카카오 지도 구축</a></li>
         <li><a href="./e_08_responsive_002.html">반응형 기능 구축</a></li>
         <li><a href="./e_09_scrollMove.html">웹페이지 스크롤 기능 처리</a></li>
+        <li><a href="./e_10_scrollMove_002.html">스크롤 처리시 이미지 변환-parallax001</a></li>
       </ul>
     </section>
 
