[add] project cubeme

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -86,6 +86,7 @@
         </nav>
       </nav> <!-- // #navigation -->
 
+      <!-- hand_nav -->
       <nav id="hand_nav">
         <h2 class="blind">navigation</h2>
         <button class="hand_language" tabindex="0">
@@ -99,9 +100,43 @@
         <button type="button" class="hand_cart"></button>
         <button type="button" class="hand_menu"></button>
       </nav>
-      <!-- <div class="side_menu">
+      
+      <div class="side_menu">
+        <div class="side_menu_area">
+          <div class="close_btn"></div>
+          <ul class="side_header">
+            <li class="side_language">
+              <div class="lan_korean on"><a href="#"><span>한국어</span></a></div>
+              <div class="lan_english"><a href="#"><span>ENGLISH</span></a></div>
+              <div class="lan_chinese"><a href="#"><span>中國語</span></a></div>
+            </li>
+            <li class="side_user">
+              <div class="side_login">로그인</div>
+              <div class="side_join">회원가입</div>
+            </li>
+          </ul>
+          <ul class="side_menu_part">
+            <li>home</li>
+            <li class="side_shop">
+              shop
+              <ul class="shop_sub_menu">
+                <li>베스트</li>
+                <li>콜라겐</li>
+                <li>다이어트</li>
+                <li>이너뷰티</li>
+                <li>헬스</li>
+                <li>키즈</li>
+              </ul>
+            </li>
+            <li>challenge</li>
+            <li>event</li>
+            <li>magazine</li>
+            <li>brand</li>
+            <li>store</li>
+          </ul>
+        </div> <!-- // .side_menu_area -->
 
-      </div> -->
+      </div> <!-- // .side_menu -->
       
     </header> <!-- // #headBox-->
 
