[add]  비밀번호 속성변경으로 내용확인하기

--- a/study_code/b_step_03/html/d_13_class.html
+++ b/study_code/b_step_03/html/d_13_class.html
@@ -27,9 +27,9 @@
               <input type="text" value="" id="userId" name="user__id" />
             </div>
             <div class="input_pw">
-              <label for="usePw">pw</label>
-              <input type="password" value="" id="usePw" name="user__pw" />
-              <button type="button"><span class="blind">임시 비밀번호 보기</span><span aria-hidden="true">i</span></button>
+              <label for="userPw">pw</label>
+              <input type="password" value="" id="userPw" name="user__pw" />
+              <button type="button" class="pw_view"><span class="blind">임시 비밀번호 보기</span><span aria-hidden="true">i</span></button>
             </div>
             <div class="check_remember">
               <label for="userRemember">remember</label>
