[add]  async-await 처리방법 이해 및 axios사용

--- a/study_code/b_step_03/html/d_13_class.html
+++ b/study_code/b_step_03/html/d_13_class.html
@@ -15,7 +15,10 @@
     <header id="headBox">
       <h1><a href="./a_content.html">js - 웹</a></h1>
     </header>
-    <main class="temp"></main>
+
+    <main class="temp">
+
+    </main>
 
     <article class="formBox">
       <form action="#" method="get">
@@ -46,7 +49,11 @@
     </footer>
 
   </div>
+  <!-- script -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <!-- <script src="../dist/src/d_13_class.js"></script> -->
-  <script src="../dist/src/d_13_class2.js"></script>
+  <!-- <script src="../dist/src/d_13_class2.js"></script> -->
+  <!-- <script src="../dist/src/d_13_class3.js"></script> -->
+  <script src="../dist/src/d_13_class4.js"></script>
 </body>
 </html>
