--- a/study_code/b_step_03/html/d_13_class.html
+++ b/study_code/b_step_03/html/d_13_class.html
@@ -49,11 +49,13 @@
     </footer>
 
   </div>
+
   <!-- script -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <!-- <script src="../dist/src/d_13_class.js"></script> -->
   <!-- <script src="../dist/src/d_13_class2.js"></script> -->
   <!-- <script src="../dist/src/d_13_class3.js"></script> -->
   <script src="../dist/src/d_13_class4.js"></script>
+  <script src="../dist/src/d_13_insertHTML.js"></script>
 </body>
 </html>
