[add] handhelds header menu 수정

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -84,7 +84,7 @@
             </div>
           </nav>
         </nav> <!-- // #navigation -->
-        <!-- hand_nav -->
+        <!-- hand_nav ========================================================= -->
         <nav id="hand_nav">
           <h2 class="blind">navigation</h2>
           <button class="hand_language" tabindex="0">
@@ -101,7 +101,7 @@
         
         <div class="side_menu">
           <div class="side_menu_area">
-            <div class="close_btn"></div>
+            <button class="close_btn"></button>
             <ul class="side_header">
               <li class="side_language">
                 <div class="lan_korean on"><a href="#"><span>한국어</span></a></div>
@@ -109,29 +109,35 @@
                 <div class="lan_chinese"><a href="#"><span>中國語</span></a></div>
               </li>
               <li class="side_user">
-                <div class="side_login">로그인</div>
-                <div class="side_join">회원가입</div>
+                <div class="side_login"><a href="#">로그인</a></div>
+                <div class="side_join"><a href="#">회원가입</a></div>
               </li>
             </ul>
             <ul class="side_menu_part">
-              <li>home</li>
+              <li><a href="#">home</a></li>
               <li class="side_shop">
-                shop
+                <a href="#">shop</a>
                 <ul class="shop_sub_menu">
-                  <li>베스트</li>
-                  <li>콜라겐</li>
-                  <li>다이어트</li>
-                  <li>이너뷰티</li>
-                  <li>헬스</li>
-                  <li>키즈</li>
+                  <li><a href="#">베스트</a></li>
+                  <li><a href="#">콜라겐</a></li>
+                  <li><a href="#">다이어트</a></li>
+                  <li><a href="#">이너뷰티</a></li>
+                  <li><a href="#">헬스</a></li>
+                  <li><a href="#">키즈</a></li>
                 </ul>
               </li>
-              <li>challenge</li>
-              <li>event</li>
-              <li>magazine</li>
-              <li>brand</li>
-              <li>store</li>
+              <li><a href="#">challenge</a></li>
+              <li><a href="#">event</a></li>
+              <li><a href="#">magazine</a></li>
+              <li><a href="#">brand</a></li>
+              <li><a href="#">store</a></li>
             </ul>
+            <div class="side_footer_area">
+              <ul class="side_footer">
+                <li><a href="#">매장안내</a></li>
+                <li><a href="#">고객센터</a></li>
+              </ul>
+            </div>
           </div> <!-- // .side_menu_area -->
         </div> <!-- // .side_menu -->
         
