[modify] view 슬라이드 오류 수정

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -411,19 +411,19 @@
             <div class="awards_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
             <div class="awards_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
           </div>
-          <ul class="awards_indicator">
+          <!-- <ul class="awards_indicator">
             <li class="awards_circle on"><button type="button"></button></li>
             <li class="awards_circle"><button type="button"></button></li>
             <li class="awards_circle"><button type="button"></button></li>
             <li class="awards_circle"><button type="button"></button></li>
             <li class="awards_circle"><button type="button"></button></li>
-          </ul>
+          </ul> -->
           <ul class="awards_main">
             <li class="awards black"></li>
             <li class="awards"></li>
             <li class="awards"></li>
-            <li class="awards black"></li>
             <li class="awards"></li>
+            <li class="awards black"></li>
             <li class="awards"></li>
             <li class="awards"></li>
             <li class="awards"></li>
