--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -408,8 +408,8 @@
       <div class="awards_area">
         <div class="awards_part">
           <div class="awards_btn">
-            <div class="awards_after_btn"><button type="button"><span class="blind">다음보기</span></button></div>
-            <div class="awards_before_btn"><button type="button"><span class="blind">이전보기</span></button></div>
+            <button class="awards_after_btn" type="button"><span class="blind">다음보기</span></button>
+            <button class="awards_before_btn" type="button"><span class="blind">이전보기</span></button>
           </div>
           <!-- <ul class="awards_indicator">
             <li class="awards_circle on"><button type="button"></button></li>
@@ -419,14 +419,14 @@
             <li class="awards_circle"><button type="button"></button></li>
           </ul> -->
           <ul class="awards_main">
-            <li class="awards black"></li>
-            <li class="awards"></li>
-            <li class="awards"></li>
-            <li class="awards"></li>
-            <li class="awards black"></li>
-            <li class="awards"></li>
-            <li class="awards"></li>
-            <li class="awards"></li>
+            <li class="awards awards_01"></li>
+            <li class="awards awards_02"></li>
+            <li class="awards awards_03"></li>
+            <li class="awards awards_04"></li>
+            <li class="awards awards_05"></li>
+            <li class="awards awards_06"></li>
+            <li class="awards awards_07"></li>
+            <li class="awards awards_08"></li>
           </ul>
         </div>
       </div> <!-- // .awards_area -->
