[add] lorem text를 제대로 입력

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -187,9 +187,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">엠티 큐브 4주 파우치</dt>
+              <dd class="text_price">28,000원</dd>
+              <dd class="text_detail">오늘 아침, 성공적, 휴대가 간편한 파우치 타입</dd>
             </dl>
           </a>
         </li>
@@ -197,9 +197,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">블럭 큐브 4주 파우치</dt>
+              <dd class="text_price">28,000원</dd>
+              <dd class="text_detail">참을 수 있는 존재의 가벼움</dd>
             </dl>
           </a>
         </li>
@@ -207,9 +207,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">커트 큐브 4주 파우치</dt>
+              <dd class="text_price">36,000원</dd>
+              <dd class="text_detail">오늘도 걱정 없이 먹는다</dd>
             </dl>
           </a>
         </li>
@@ -217,9 +217,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">엠티 큐브 4주/8주</dt>
+              <dd class="text_price">46,400원</dd>
+              <dd class="text_detail">오늘 아침, 성공적</dd>
             </dl>
           </a>
         </li>
@@ -227,9 +227,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">깨끗한 발효효소(90g)</dt>
+              <dd class="text_price">48,000원</dd>
+              <dd class="text_detail">유기농 녹차 발효 효소와 포스트바이오틱스로 구성된 프리미엄 발효 효소 + 유산균</dd>
             </dl>
           </a>
         </li>
@@ -237,9 +237,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">콜라켄 큐브 5주 X 3ea</dt>
+              <dd class="text_price">81,000원</dd>
+              <dd class="text_detail">물없이 맛있게 먹는 츄어블! 56% 할인쿠폰 자동 발급</dd>
             </dl>
           </a>
         </li>
@@ -247,9 +247,9 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">프로틴 큐브 2주</dt>
+              <dd class="text_price">36,000원</dd>
+              <dd class="text_detail">매일 건강하고 맛있게 섭취하는 한끼 식사 대용식</dd>
             </dl>
           </a>
         </li>
@@ -257,22 +257,13 @@
           <a href="#">
             <div class="best_img"></div>
             <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
+              <dt class="text_title">멀티비타 큐브 6주분</dt>
+              <dd class="text_price">70,000원</dd>
+              <dd class="text_detail">내 아이를 위한 13가지 멀티비타민미네랄</dd>
             </dl>
           </a>
         </li>
-        <li class="best_item">
-          <a href="#">
-            <div class="best_img"></div>
-            <dl class="best_text">
-              <dt class="text_title">Lorem.</dt>
-              <dd class="text_price">Lorem, ipsum.</dd>
-              <dd class="text_detail">Lorem ipsum dolor sit amet.</dd>
-            </dl>
-          </a>
-        </li>
+        
       </ul>
 
     </section> <!-- // #bestBox-->
@@ -344,15 +335,15 @@
         <div class="title_text">
           <h2 class="title">진행중인 이벤트</h2>
         </div>
-        <div class="title_all"><a href="./event_v1.html">모두보기(<span class="event_length">4</span>)</a></div>
+        <div class="title_all"><a href="./event_v1.html">모두보기(<span class="event_length">6</span>)</a></div>
       </div>
       <ul class="event_area">
         <li class="event">
           <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
-              <dt class="event_title">Lorem.</dt>
-              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+              <dt class="event_title">2022 설 선물 기획세트</dt>
+              <dd class="event_detial">최대 60% 할인</dd>
             </dl>
           </a>
         </li>
@@ -361,8 +352,8 @@
           <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
-              <dt class="event_title">Lorem.</dt>
-              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+              <dt class="event_title">신규회원 100원 딜</dt>
+              <dd class="event_detial">오직 신규회원만 100원으로 만나는 큐브미</dd>
             </dl>
           </a>
         </li>
@@ -371,8 +362,8 @@
           <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
-              <dt class="event_title">Lorem.</dt>
-              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+              <dt class="event_title">아모레퍼시픽 신한카드 프로모션</dt>
+              <dd class="event_detial">최대 10만포인트 적립</dd>
             </dl>
           </a>
         </li>
@@ -381,8 +372,8 @@
           <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
-              <dt class="event_title">Lorem.</dt>
-              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+              <dt class="event_title">슬기로운 친추생활</dt>
+              <dd class="event_detial">친구 초대하면 친구도 나도 포인트 적립</dd>
             </dl>
           </a>
         </li>
@@ -391,8 +382,8 @@
           <a href="./event_v1.html">
             <div class="event_img"></div>
             <dl class="event_text">
-              <dt class="event_title">Lorem.</dt>
-              <dd class="event_detial">Lorem ipsum dolor sit.</dd>
+              <dt class="event_title">다이어트 서비스</dt>
+              <dd class="event_detial">챌린지 신청시 30% 할인</dd>
             </dl>
           </a>
         </li>
@@ -447,13 +438,13 @@
           <a href="#">
             <div class="sale_img"></div>
             <ul class="sale_text">
-              <li class="sale_title">Lorem, ipsum dolor.</li>
-              <li class="sale_last_price">Lorem, ipsum dolor.</li>
-              <li class="sale_price_area clearfix">
-                <div class="sale_percent">per</div>
-                <div class="sale_price">price</div>
+              <li class="sale_title">엠티 큐브 4주 파우치</li>
+              <li class="sale_last_price">35,000원</li>
+              <li class="sale_price_area">
+                <div class="sale_percent">20%</div>
+                <div class="sale_price">28,000원</div>
               </li>
-              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="sale_detial">오늘 아침, 성공적, 휴대가 간편한 파우치 타입</li>
             </ul>
           </a>
         </div>
@@ -462,13 +453,13 @@
           <a href="#">
             <div class="sale_img"></div>
             <ul class="sale_text">
-              <li class="sale_title">Lorem, ipsum dolor.</li>
-              <li class="sale_last_price">Lorem, ipsum dolor.</li>
-              <li class="sale_price_area clearfix">
-                <div class="sale_percent">per</div>
-                <div class="sale_price">price</div>
+              <li class="sale_title">블럭 큐브 4주 파우치</li>
+              <li class="sale_last_price">35,000원</li>
+              <li class="sale_price_area">
+                <div class="sale_percent">20%</div>
+                <div class="sale_price">28,000원</div>
               </li>
-              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="sale_detial">참을 수 있는 존재의 가벼움</li>
             </ul>
           </a>
         </div>
@@ -477,13 +468,13 @@
           <a href="#">
             <div class="sale_img"></div>
             <ul class="sale_text">
-              <li class="sale_title">Lorem, ipsum dolor.</li>
-              <li class="sale_last_price">Lorem, ipsum dolor.</li>
-              <li class="sale_price_area clearfix">
-                <div class="sale_percent">per</div>
-                <div class="sale_price">price</div>
+              <li class="sale_title">커트 큐브 4주 파우치</li>
+              <li class="sale_last_price">45,000원</li>
+              <li class="sale_price_area">
+                <div class="sale_percent">20%</div>
+                <div class="sale_price">36,000원</div>
               </li>
-              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="sale_detial">오늘도 걱정 없이 먹는다</li>
             </ul>
           </a>
         </div>
@@ -492,13 +483,13 @@
           <a href="#">
             <div class="sale_img"></div>
             <ul class="sale_text">
-              <li class="sale_title">Lorem, ipsum dolor.</li>
-              <li class="sale_last_price">Lorem, ipsum dolor.</li>
-              <li class="sale_price_area clearfix">
-                <div class="sale_percent">per</div>
-                <div class="sale_price">price</div>
+              <li class="sale_title">엠티 큐브 4주/8주</li>
+              <li class="sale_last_price">58,000원</li>
+              <li class="sale_price_area">
+                <div class="sale_percent">20%</div>
+                <div class="sale_price">46,400원</div>
               </li>
-              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="sale_detial">오늘 아침, 성공적</li>
             </ul>
           </a>
         </div>
@@ -507,13 +498,13 @@
           <a href="#">
             <div class="sale_img"></div>
             <ul class="sale_text">
-              <li class="sale_title">Lorem, ipsum dolor.</li>
-              <li class="sale_last_price">Lorem, ipsum dolor.</li>
-              <li class="sale_price_area clearfix">
-                <div class="sale_percent">per</div>
-                <div class="sale_price">price</div>
+              <li class="sale_title">깨끗한 발효효소(90g)</li>
+              <li class="sale_last_price">60,000원</li>
+              <li class="sale_price_area">
+                <div class="sale_percent">20%</div>
+                <div class="sale_price">48,000원</div>
               </li>
-              <li class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li class="sale_detial">유기농 녹차 발효 효소와 포스트바이오틱스로 구성된 프리미엄 발효 효소 + 유산균</li>
             </ul>
           </a>
         </div>
