[add] cubeme project slide, language - js

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -104,9 +104,10 @@
             <button class="close_btn"></button>
             <ul class="side_header">
               <li class="side_language">
-                <div class="lan_korean on"><a href="#"><span>한국어</span></a></div>
-                <div class="lan_english"><a href="#"><span>ENGLISH</span></a></div>
-                <div class="lan_chinese"><a href="#"><span>中國語</span></a></div>
+                <span class="language_check">한국어</span>
+                <div class="lan_korean"><button href="#"><span>한국어</span></button></div>
+                <div class="lan_english"><button href="#"><span>ENGLISH</span></button></div>
+                <div class="lan_chinese"><button href="#"><span>中國語</span></button></div>
               </li>
               <li class="side_user">
                 <div class="side_login"><a href="#">로그인</a></div>
@@ -402,13 +403,7 @@
             <button class="awards_after_btn" type="button"><span class="blind">다음보기</span></button>
             <button class="awards_before_btn" type="button"><span class="blind">이전보기</span></button>
           </div>
-          <!-- <ul class="awards_indicator">
-            <li class="awards_circle on"><button type="button"></button></li>
-            <li class="awards_circle"><button type="button"></button></li>
-            <li class="awards_circle"><button type="button"></button></li>
-            <li class="awards_circle"><button type="button"></button></li>
-            <li class="awards_circle"><button type="button"></button></li>
-          </ul> -->
+
           <ul class="awards_main">
             <li class="awards awards_01"></li>
             <li class="awards awards_02"></li>
@@ -538,9 +533,13 @@
       <div class="foot_main_area">
         <ul class="foot_main_btn">
           <li class="foot_notice"><a href="#">공지사항</a></li>
+          <li class="dot"></li>
           <li class="foot_inquire"><a href="#">1:1문의</a></li>
+          <li class="dot"></li>
           <li class="foot_qna"><a href="#">자주 묻는 질문</a></li>
+          <li class="dot"></li>
           <li class="foot_personal"><a href="#">개인정보처리방침</a></li>
+          <li class="dot"></li>
           <li class="foot_agreement"><a href="#">이용약관</a></li>
         </ul>
 
