--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -568,6 +568,7 @@
   </div><!-- // #wrap -->
 
   <!-- script -->
+  <script src="../js/src/component.js"></script>
   <script src="../js/src/main.js"></script>
   
 </body>
