[modify] event 오류 해결

--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -162,48 +162,48 @@
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">2022 설 선물 기획세트</div>
+                <div class="event_date">2022.01.01 ~ 2022.01.31</div>
               </a>
             </li>
             <li class="event event_con_02">
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">신규회원 100원 딜</div>
+                <div class="event_date">2021.07.16 ~ 2022.06.30</div>
               </a>
             </li>
             <li class="event event_con_03">
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">슬기로운 친추생활</div>
+                <div class="event_date">2021.05.01 ~ 2022.06.30</div>
               </a>
             </li>
             <li class="event event_con_04">
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">신한카드 프로모션</div>
+                <div class="event_date">2021.04.12 ~ 2022.06.30</div>
               </a>
             </li>
             <li class="event event_con_05">
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">다이어트 챌린지 이벤트</div>
+                <div class="event_date">2021.05.01 ~ 2022.05.31</div>
               </a>
             </li>
             <li class="event event_con_06">
               <a href="#">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
-                <div class="event_title">Lorem, ipsum dolor.</div>
-                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+                <div class="event_title">Good-bye 2021 경품 추첨</div>
+                <div class="event_date">2021.12.01 ~ 2021.12.25</div>
               </a>
             </li>
           </ul>
