--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -41,12 +41,12 @@
           <nav id="gnb">
             <h3 class="blind">주요 네비게이션</h3>
             <ul>
-              <li class="gnb_item"><a href="#">모든 상품</a></li>
-              <li class="gnb_challenge"><a href="#">챌린지</a></li>
+              <li class="gnb_item"><a href="javascript:void(0)">모든 상품</a></li>
+              <li class="gnb_challenge"><a href="javascript:void(0)">챌린지</a></li>
               <li class="gnb_event"><a href="./event_v1.html">이벤트</a></li>
-              <li class="gnb_magazine"><a href="#">매거진</a></li>
-              <li class="gnb_brand"><a href="#">브랜드 소개</a></li>
-              <li class="gnb_store"><a href="#">매장안내</a></li>
+              <li class="gnb_magazine"><a href="javascript:void(0)">매거진</a></li>
+              <li class="gnb_brand"><a href="javascript:void(0)">브랜드 소개</a></li>
+              <li class="gnb_store"><a href="javascript:void(0)">매장안내</a></li>
             </ul>
           </nav>
           <nav id="unb">
@@ -55,17 +55,17 @@
               <li class="unb_language" tabindex="0">
                 <!-- <div class="language_img" tabindex="0"></div> -->
                 <ul class="unb_lauguage_area">
-                  <li><a href="#">한국어</a></li>
-                  <li><a href="#">ENGLISH</a></li>
-                  <li><a href="#">中國語</a></li>
+                  <li><a href="javascript:void(0)">한국어</a></li>
+                  <li><a href="javascript:void(0)">ENGLISH</a></li>
+                  <li><a href="javascript:void(0)">中國語</a></li>
                 </ul>
-                <!-- <div><a href="#">한국어</a></div>
-                <div><a href="#">ENGLISH</a></div>
-                <div><a href="#">中國語</a></div> -->
+                <!-- <div><a href="javascript:void(0)">한국어</a></div>
+                <div><a href="javascript:void(0)">ENGLISH</a></div>
+                <div><a href="javascript:void(0)">中國語</a></div> -->
               </li>
-              <li class="unb_sign"><a href="#">회원가입</a></li>
-              <li class="unb_login"><a href="#">로그인</a></li>
-              <li class="unb_cs"><a href="#">고객센터</a></li>
+              <li class="unb_sign"><a href="javascript:void(0)">회원가입</a></li>
+              <li class="unb_login"><a href="javascript:void(0)">로그인</a></li>
+              <li class="unb_cs"><a href="javascript:void(0)">고객센터</a></li>
             </ul>
             <div class="unb_search_area">
               <h4 class="blind">사이트 주요 검색 및 장바구니</h4>
@@ -79,7 +79,7 @@
                 </div>
               </div> <!-- // .unb_search -->
               <div class="unb_cart">
-                <a href="#"></a>
+                <a href="javascript:void(0)"></a>
               </div>
             </div>
           </nav>
@@ -89,9 +89,9 @@
           <h2 class="blind">navigation</h2>
           <button class="hand_language" tabindex="0">
             <ul class="hand_language_area">
-              <li><a href="#"><span>한국어</span></a></li>
-              <li><a href="#"><span>ENGLISH</span></a></li>
-              <li><a href="#"><span>中國語</span></a></li>
+              <li><a href="javascript:void(0)"><span>한국어</span></a></li>
+              <li><a href="javascript:void(0)"><span>ENGLISH</span></a></li>
+              <li><a href="javascript:void(0)"><span>中國語</span></a></li>
             </ul>
           </button>
           <button type="button" class="hand_search"></button>
@@ -105,38 +105,38 @@
             <ul class="side_header">
               <li class="side_language">
                 <span class="language_check">한국어</span>
-                <div class="lan_korean"><button href="#"><span>한국어</span></button></div>
-                <div class="lan_english"><button href="#"><span>ENGLISH</span></button></div>
-                <div class="lan_chinese"><button href="#"><span>中國語</span></button></div>
+                <div class="lan_korean"><button href="javascript:void(0)"><span>한국어</span></button></div>
+                <div class="lan_english"><button href="javascript:void(0)"><span>ENGLISH</span></button></div>
+                <div class="lan_chinese"><button href="javascript:void(0)"><span>中國語</span></button></div>
               </li>
               <li class="side_user">
-                <div class="side_login"><a href="#">로그인</a></div>
-                <div class="side_join"><a href="#">회원가입</a></div>
+                <div class="side_login"><a href="javascript:void(0)">로그인</a></div>
+                <div class="side_join"><a href="javascript:void(0)">회원가입</a></div>
               </li>
             </ul>
             <ul class="side_menu_part">
-              <li><a href="#">home</a></li>
+              <li><a href="javascript:void(0)">home</a></li>
               <li class="side_shop">
-                <a href="#">shop</a>
+                <a href="javascript:void(0)">shop</a>
                 <ul class="shop_sub_menu">
-                  <li><a href="#">베스트</a></li>
-                  <li><a href="#">콜라겐</a></li>
-                  <li><a href="#">다이어트</a></li>
-                  <li><a href="#">이너뷰티</a></li>
-                  <li><a href="#">헬스</a></li>
-                  <li><a href="#">키즈</a></li>
+                  <li><a href="javascript:void(0)">베스트</a></li>
+                  <li><a href="javascript:void(0)">콜라겐</a></li>
+                  <li><a href="javascript:void(0)">다이어트</a></li>
+                  <li><a href="javascript:void(0)">이너뷰티</a></li>
+                  <li><a href="javascript:void(0)">헬스</a></li>
+                  <li><a href="javascript:void(0)">키즈</a></li>
                 </ul>
               </li>
-              <li><a href="#">challenge</a></li>
-              <li><a href="#">event</a></li>
-              <li><a href="#">magazine</a></li>
-              <li><a href="#">brand</a></li>
-              <li><a href="#">store</a></li>
+              <li><a href="javascript:void(0)">challenge</a></li>
+              <li><a href="javascript:void(0)">event</a></li>
+              <li><a href="javascript:void(0)">magazine</a></li>
+              <li><a href="javascript:void(0)">brand</a></li>
+              <li><a href="javascript:void(0)">store</a></li>
             </ul>
             <div class="side_footer_area">
               <ul class="side_footer">
-                <li><a href="#">매장안내</a></li>
-                <li><a href="#">고객센터</a></li>
+                <li><a href="javascript:void(0)">매장안내</a></li>
+                <li><a href="javascript:void(0)">고객센터</a></li>
               </ul>
             </div>
           </div> <!-- // .side_menu_area -->
@@ -156,19 +156,19 @@
         </div>
         <div class="view">
           <ul class="view_in_wrap">
-              <li class="view_content view_content_01 on"><a href="#"></a></li>
-              <li class="view_content view_content_02"><a href="#"></a></li>
-              <li class="view_content view_content_03"><a href="#"></a></li>
-              <li class="view_content view_content_04"><a href="#"></a></li>
-              <li class="view_content view_content_05"><a href="#"></a></li>
+              <li class="view_content view_content_01 on"><a href="javascript:void(0)"></a></li>
+              <li class="view_content view_content_02"><a href="javascript:void(0)"></a></li>
+              <li class="view_content view_content_03"><a href="javascript:void(0)"></a></li>
+              <li class="view_content view_content_04"><a href="javascript:void(0)"></a></li>
+              <li class="view_content view_content_05"><a href="javascript:void(0)"></a></li>
           </ul>
         </div>
         <div class="view_num"><span class="view_now_count">1</span>&sol;<span class="view_total_count"></span></div>
       </div> <!-- // .view_area -->
       <ul class="side_view_area">
-        <li class="side_view side_view_event"><a href="#"><p>오직 큐브미에서만!</p></a></li>
-        <li class="side_view side_view_magazine"><a href="#"><p>CUBEME Magazine</p></a></li>
-        <li class="side_view side_view_brand"><a href="#"><p>CUBEME Brand Story</p></a></li>
+        <li class="side_view side_view_event"><a href="javascript:void(0)"><p>오직 큐브미에서만!</p></a></li>
+        <li class="side_view side_view_magazine"><a href="javascript:void(0)"><p>CUBEME Magazine</p></a></li>
+        <li class="side_view side_view_brand"><a href="javascript:void(0)"><p>CUBEME Brand Story</p></a></li>
       </ul>
 
     </section> <!-- // #viewBox-->
@@ -181,11 +181,11 @@
           <h2 class="title">가장 핫한 큐브</h2>
           <span class="sub_title">1월 가장 인기 많은 베스트 큐브를 만나보세요.</span>
         </div>
-        <div class="title_all"><a href="#">모두보기(<span class="best_length">14</span>)</a></div>
+        <div class="title_all"><a href="javascript:void(0)">모두보기(<span class="best_length">14</span>)</a></div>
       </div>
       <ul class="best_area">
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">엠티 큐브 4주 파우치</dt>
@@ -195,7 +195,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">블럭 큐브 4주 파우치</dt>
@@ -205,7 +205,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">커트 큐브 4주 파우치</dt>
@@ -215,7 +215,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">엠티 큐브 4주/8주</dt>
@@ -225,7 +225,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">깨끗한 발효효소(90g)</dt>
@@ -235,7 +235,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">콜라켄 큐브 5주 X 3ea</dt>
@@ -245,7 +245,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">프로틴 큐브 2주</dt>
@@ -255,7 +255,7 @@
           </a>
         </li>
         <li class="best_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="best_img"></div>
             <dl class="best_text">
               <dt class="text_title">멀티비타 큐브 6주분</dt>
@@ -323,8 +323,8 @@
         </div>
       </div>
       <ul class="challenge_area">
-        <li class="challenge"><a href="#"></a></li>
-        <li class="challenge"><a href="#"></a></li>
+        <li class="challenge"><a href="javascript:void(0)"></a></li>
+        <li class="challenge"><a href="javascript:void(0)"></a></li>
       </ul>
 
     </article> <!-- // #challengeBox-->
@@ -430,7 +430,7 @@
       </div>
       <div class="sale_area">
         <div class="sale_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="sale_img"></div>
             <ul class="sale_text">
               <li class="sale_title">엠티 큐브 4주 파우치</li>
@@ -445,7 +445,7 @@
         </div>
 
         <div class="sale_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="sale_img"></div>
             <ul class="sale_text">
               <li class="sale_title">블럭 큐브 4주 파우치</li>
@@ -460,7 +460,7 @@
         </div>
 
         <div class="sale_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="sale_img"></div>
             <ul class="sale_text">
               <li class="sale_title">커트 큐브 4주 파우치</li>
@@ -475,7 +475,7 @@
         </div>
 
         <div class="sale_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="sale_img"></div>
             <ul class="sale_text">
               <li class="sale_title">엠티 큐브 4주/8주</li>
@@ -490,7 +490,7 @@
         </div>
 
         <div class="sale_item">
-          <a href="#">
+          <a href="javascript:void(0)">
             <div class="sale_img"></div>
             <ul class="sale_text">
               <li class="sale_title">깨끗한 발효효소(90g)</li>
@@ -511,7 +511,7 @@
     <!-- #magazineBox -->
     <article id="magazineBox">
       <h2 class="blind">매거진</h2>
-      <div class="magazine_img"><a href="#"></a></div>
+      <div class="magazine_img"><a href="javascript:void(0)"></a></div>
 
     </article> <!-- // #magazineBox-->
 
@@ -523,24 +523,24 @@
           <span class="blind">큐브미 정보</span>
         </h2>
         <div class="foot_top_btn">
-          <div class="foot_products"><a href="#">Products</a></div>
-          <div class="foot_brand"><a href="#"> Brand</a></div>
-          <div class="foot_help"><a href="#">Help</a></div>
-          <div class="foot_contact"><a href="#">Contact us</a></div>
+          <div class="foot_products"><a href="javascript:void(0)">Products</a></div>
+          <div class="foot_brand"><a href="javascript:void(0)"> Brand</a></div>
+          <div class="foot_help"><a href="javascript:void(0)">Help</a></div>
+          <div class="foot_contact"><a href="javascript:void(0)">Contact us</a></div>
         </div>
       </div>
 
       <div class="foot_main_area">
         <ul class="foot_main_btn">
-          <li class="foot_notice"><a href="#">공지사항</a></li>
+          <li class="foot_notice"><a href="javascript:void(0)">공지사항</a></li>
           <li class="dot"></li>
-          <li class="foot_inquire"><a href="#">1:1문의</a></li>
+          <li class="foot_inquire"><a href="javascript:void(0)">1:1문의</a></li>
           <li class="dot"></li>
-          <li class="foot_qna"><a href="#">자주 묻는 질문</a></li>
+          <li class="foot_qna"><a href="javascript:void(0)">자주 묻는 질문</a></li>
           <li class="dot"></li>
-          <li class="foot_personal"><a href="#">개인정보처리방침</a></li>
+          <li class="foot_personal"><a href="javascript:void(0)">개인정보처리방침</a></li>
           <li class="dot"></li>
-          <li class="foot_agreement"><a href="#">이용약관</a></li>
+          <li class="foot_agreement"><a href="javascript:void(0)">이용약관</a></li>
         </ul>
 
         <address class="foot_info">
@@ -553,10 +553,10 @@
 
         <ul class="foot_bottom_btn">
           <li class="foot_facebook">
-            <a href="#"></a>
+            <a href="javascript:void(0)"></a>
           </li>
           <li class="foot_instagram">
-            <a href="#"></a>
+            <a href="javascript:void(0)"></a>
           </li>
         </ul>
       </div> <!-- // .foot_main_area -->
