--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -40,12 +40,12 @@
           <nav id="gnb">
             <h3 class="blind">주요 네비게이션</h3>
             <ul>
-              <li class="gnb_item"><a href="#">모든 상품</a></li>
-              <li class="gnb_challenge"><a href="#">챌린지</a></li>
+              <li class="gnb_item"><a href="javascript:void(0)">모든 상품</a></li>
+              <li class="gnb_challenge"><a href="javascript:void(0)">챌린지</a></li>
               <li class="gnb_event"><a href="./event_v1.html">이벤트</a></li>
-              <li class="gnb_magazine"><a href="#">매거진</a></li>
-              <li class="gnb_brand"><a href="#">브랜드 소개</a></li>
-              <li class="gnb_store"><a href="#">매장안내</a></li>
+              <li class="gnb_magazine"><a href="javascript:void(0)">매거진</a></li>
+              <li class="gnb_brand"><a href="javascript:void(0)">브랜드 소개</a></li>
+              <li class="gnb_store"><a href="javascript:void(0)">매장안내</a></li>
             </ul>
           </nav>
           <nav id="unb">
@@ -54,17 +54,17 @@
               <li class="unb_language" tabindex="0">
                 <!-- <div class="language_img" tabindex="0"></div> -->
                 <ul class="unb_lauguage_area">
-                  <li><a href="#">한국어</a></li>
-                  <li><a href="#">ENGLISH</a></li>
-                  <li><a href="#">中國語</a></li>
+                  <li><a href="javascript:void(0)">한국어</a></li>
+                  <li><a href="javascript:void(0)">ENGLISH</a></li>
+                  <li><a href="javascript:void(0)">中國語</a></li>
                 </ul>
-                <!-- <div><a href="#">한국어</a></div>
-                <div><a href="#">ENGLISH</a></div>
-                <div><a href="#">中國語</a></div> -->
+                <!-- <div><a href="javascript:void(0)">한국어</a></div>
+                <div><a href="javascript:void(0)">ENGLISH</a></div>
+                <div><a href="javascript:void(0)">中國語</a></div> -->
               </li>
-              <li class="unb_sign"><a href="#">회원가입</a></li>
-              <li class="unb_login"><a href="#">로그인</a></li>
-              <li class="unb_cs"><a href="#">고객센터</a></li>
+              <li class="unb_sign"><a href="javascript:void(0)">회원가입</a></li>
+              <li class="unb_login"><a href="javascript:void(0)">로그인</a></li>
+              <li class="unb_cs"><a href="javascript:void(0)">고객센터</a></li>
             </ul>
             <div class="unb_search_area">
               <h4 class="blind">사이트 주요 검색 및 장바구니</h4>
@@ -78,7 +78,7 @@
                 </div>
               </div> <!-- // .unb_search -->
               <div class="unb_cart">
-                <a href="#"></a>
+                <a href="javascript:void(0)"></a>
               </div>
             </div>
           </nav>
@@ -88,9 +88,9 @@
           <h2 class="blind">navigation</h2>
           <button class="hand_language" tabindex="0">
             <ul class="hand_language_area">
-              <li><a href="#"><span>한국어</span></a></li>
-              <li><a href="#"><span>ENGLISH</span></a></li>
-              <li><a href="#"><span>中國語</span></a></li>
+              <li><a href="javascript:void(0)"><span>한국어</span></a></li>
+              <li><a href="javascript:void(0)"><span>ENGLISH</span></a></li>
+              <li><a href="javascript:void(0)"><span>中國語</span></a></li>
             </ul>
           </button>
           <button type="button" class="hand_search"></button>
@@ -104,38 +104,38 @@
             <ul class="side_header">
               <li class="side_language">
                 <span class="language_check">한국어</span>
-                <div class="lan_korean"><button href="#"><span>한국어</span></button></div>
-                <div class="lan_english"><button href="#"><span>ENGLISH</span></button></div>
-                <div class="lan_chinese"><button href="#"><span>中國語</span></button></div>
+                <div class="lan_korean"><button href="javascript:void(0)"><span>한국어</span></button></div>
+                <div class="lan_english"><button href="javascript:void(0)"><span>ENGLISH</span></button></div>
+                <div class="lan_chinese"><button href="javascript:void(0)"><span>中國語</span></button></div>
               </li>
               <li class="side_user">
-                <div class="side_login"><a href="#">로그인</a></div>
-                <div class="side_join"><a href="#">회원가입</a></div>
+                <div class="side_login"><a href="javascript:void(0)">로그인</a></div>
+                <div class="side_join"><a href="javascript:void(0)">회원가입</a></div>
               </li>
             </ul>
             <ul class="side_menu_part">
-              <li><a href="#">home</a></li>
+              <li><a href="javascript:void(0)">home</a></li>
               <li class="side_shop">
-                <a href="#">shop</a>
+                <a href="javascript:void(0)">shop</a>
                 <ul class="shop_sub_menu">
-                  <li><a href="#">베스트</a></li>
-                  <li><a href="#">콜라겐</a></li>
-                  <li><a href="#">다이어트</a></li>
-                  <li><a href="#">이너뷰티</a></li>
-                  <li><a href="#">헬스</a></li>
-                  <li><a href="#">키즈</a></li>
+                  <li><a href="javascript:void(0)">베스트</a></li>
+                  <li><a href="javascript:void(0)">콜라겐</a></li>
+                  <li><a href="javascript:void(0)">다이어트</a></li>
+                  <li><a href="javascript:void(0)">이너뷰티</a></li>
+                  <li><a href="javascript:void(0)">헬스</a></li>
+                  <li><a href="javascript:void(0)">키즈</a></li>
                 </ul>
               </li>
-              <li><a href="#">challenge</a></li>
-              <li><a href="#">event</a></li>
-              <li><a href="#">magazine</a></li>
-              <li><a href="#">brand</a></li>
-              <li><a href="#">store</a></li>
+              <li><a href="javascript:void(0)">challenge</a></li>
+              <li><a href="javascript:void(0)">event</a></li>
+              <li><a href="javascript:void(0)">magazine</a></li>
+              <li><a href="javascript:void(0)">brand</a></li>
+              <li><a href="javascript:void(0)">store</a></li>
             </ul>
             <div class="side_footer_area">
               <ul class="side_footer">
-                <li><a href="#">매장안내</a></li>
-                <li><a href="#">고객센터</a></li>
+                <li><a href="javascript:void(0)">매장안내</a></li>
+                <li><a href="javascript:void(0)">고객센터</a></li>
               </ul>
             </div>
           </div> <!-- // .side_menu_area -->
@@ -159,7 +159,7 @@
         <div class="tab_content clearfix">
           <ul class="event_ing_wrap">
             <li class="event event_con_01">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">2022 설 선물 기획세트</div>
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="event event_con_02">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">신규회원 100원 딜</div>
@@ -175,7 +175,7 @@
               </a>
             </li>
             <li class="event event_con_03">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">슬기로운 친추생활</div>
@@ -183,7 +183,7 @@
               </a>
             </li>
             <li class="event event_con_04">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">신한카드 프로모션</div>
@@ -191,7 +191,7 @@
               </a>
             </li>
             <li class="event event_con_05">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">다이어트 챌린지 이벤트</div>
@@ -199,7 +199,7 @@
               </a>
             </li>
             <li class="event event_con_06">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Good-bye 2021 경품 추첨</div>
@@ -209,7 +209,7 @@
           </ul>
           <ul class="event_end_wrap" hidden>
             <li class="event event_con_01">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -217,7 +217,7 @@
               </a>
             </li>
             <li class="event event_con_02">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -225,7 +225,7 @@
               </a>
             </li>
             <li class="event event_con_03">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -233,7 +233,7 @@
               </a>
             </li>
             <li class="event event_con_04">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -241,7 +241,7 @@
               </a>
             </li>
             <li class="event event_con_05">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -249,7 +249,7 @@
               </a>
             </li>
             <li class="event event_con_06">
-              <a href="#">
+              <a href="javascript:void(0)">
                 <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
@@ -271,20 +271,20 @@
           <span class="blind">큐브미 정보</span>
         </h2>
         <div class="foot_top_btn">
-          <div class="foot_products"><a href="#">Products</a></div>
-          <div class="foot_brand"><a href="#"> Brand</a></div>
-          <div class="foot_help"><a href="#">Help</a></div>
-          <div class="foot_contact"><a href="#">Contact us</a></div>
+          <div class="foot_products"><a href="javascript:void(0)">Products</a></div>
+          <div class="foot_brand"><a href="javascript:void(0)"> Brand</a></div>
+          <div class="foot_help"><a href="javascript:void(0)">Help</a></div>
+          <div class="foot_contact"><a href="javascript:void(0)">Contact us</a></div>
         </div>
       </div>
 
       <div class="foot_main_area">
         <ul class="foot_main_btn">
-          <li class="foot_notice"><a href="#">공지사항</a></li>
-          <li class="foot_inquire"><a href="#">1:1문의</a></li>
-          <li class="foot_qna"><a href="#">자주 묻는 질문</a></li>
-          <li class="foot_personal"><a href="#">개인정보처리방침</a></li>
-          <li class="foot_agreement"><a href="#">이용약관</a></li>
+          <li class="foot_notice"><a href="javascript:void(0)">공지사항</a></li>
+          <li class="foot_inquire"><a href="javascript:void(0)">1:1문의</a></li>
+          <li class="foot_qna"><a href="javascript:void(0)">자주 묻는 질문</a></li>
+          <li class="foot_personal"><a href="javascript:void(0)">개인정보처리방침</a></li>
+          <li class="foot_agreement"><a href="javascript:void(0)">이용약관</a></li>
         </ul>
 
         <address class="foot_info">
@@ -297,10 +297,10 @@
 
         <ul class="foot_bottom_btn">
           <li class="foot_facebook">
-            <a href="#"></a>
+            <a href="javascript:void(0)"></a>
           </li>
           <li class="foot_instagram">
-            <a href="#"></a>
+            <a href="javascript:void(0)"></a>
           </li>
         </ul>
       </div> <!-- // .foot_main_area -->
